--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "programs:test": "./configs/program-scripts/test.sh",
     "programs:clean": "rm -rf ./programs/.bin",
     "generate": "pnpm generate:idls && pnpm generate:clients",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider yarn run build",
     "generate:idls": "node ./configs/shank.cjs",
     "generate:clients": "node ./configs/kinobi.cjs",
     "validator": "CI=1 amman start --config ./configs/validator.cjs",
